# canvapipeline

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
canva_designer/: __init__.py  designer.py
examples/: style_text.py
tests/: test_designer.py
