[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "canva-designer"
version = "0.1.0"
description = "Automate Canva design editing via Chrome CDP. Works with Canva Free plan."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Charlie Chan", email = "chancharlie689@gmail.com"}
]
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
canva = "canva_designer.designer:main"

[tool.setuptools.packages.find]
include = ["canva_designer*"]
